# HaskellKara

./: LICENSE  README.md  haskellkara.cabal
src/: Main.hs
src/Control/Monad/: StateWithHistoryAndError.hs
src/HaskellKara/: Kara.hs
