name:                haskellkara
version:             0.0
synopsis:            A Haskell version of Kara, the programmable ladybug
description:
license:             MIT
license-file:        LICENSE
author:              Hauke Neitzel
maintainer:          hauke.neitzel@googlemail.com
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskellkara
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
